@@ -1,3 +1,7 @@
+2012-11-26  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.base/enumval.exp (print e, print f, print K): XFAIL on GCC <= 4.6.
+
 2012-11-26  Joel Brobecker  <brobecker@adacore.com>
 
 	* gdb.base/empty_exe.exp: New testcase.
